# fake-news-detector-3

./: README.md  docker-compose.yml  embedding_generation.ipynb  model_training.ipynb  pyproject.toml
app/: main.py
data/: labels.npy
