[tool.poetry]
name = "fake-news-detector"
version = "0.1.0"
description = ""
authors = ["Mate <Matesanz.Cuadrado@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "~2.0"
numpy = "~1.25"
nltk = "^3.8.1"
gensim = "^4.3.2"
mlflow = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
